# dlp-system

./: .gitignore  Autoencoder.py  README.md  alembic.ini  main.py  mlp.py  neuro.py  pyproject.toml  requirements.txt  sim.py  synthetic_behavior_dataset.csv  synthetic_behavior_dataset_complex.csv  synthetic_behavior_dataset_noisy.csv  synthetic_behavior_risk_balanced.csv  synthetic_behavior_risk_dataset.csv
gui/: auth_window.py  demo.py
models/: __init__.py  db.py  role.py  user.py  user_behavior.py  user_role.py
neuro/: Balanced_Behavioral_Dataset.csv  balanced_behavioral_data.csv  basic_model.py  behavioral_dataset_with_danger_score.csv  generate_dataset.py  synthetic_behavioral_data.csv  synthetic_behavioral_dataset.csv  synthetic_behavioral_dataset_corrected.csv
sql/: 001_create_schema.sql
