[project]
name = "dlp-system"
version = "0.1.0"
description = ""
authors = [
    {name = "Ekaterina Marchenko",email = "kate_unmatched@mail.ru"}
]
readme = "README.md"
requires-python = "3.10"
dependencies = [
    "tensorflow (==2.10.0)",
    "numpy (==1.23.5)",
    "scikit-learn (==1.0.2)",
    "scikeras (==0.11.0)",
    "pandas (>=2.2.3,<3.0.0)",
    "matplotlib (>=3.10.1,<4.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
